Fix #23404 - [Feature] Create documentType

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
@@ -37,10 +37,11 @@ path.controlunits                        = Unit\u00E9s de contr\u00F4le
 path.costs                               = Co\u00FBts
 path.customscodes                        = Codes douaniers
 path.datacarriertypecode                 = Types de code \u00E0 barres
-path.dutyfeetaxagencycodes				 = Organismes fiscaux
-path.dutyfeetaxcategorycodes			 = Cat\u00E9gories fiscales
+path.documenttype                        = Types de document
+path.dutyfeetaxagencycodes               = Organismes fiscaux
+path.dutyfeetaxcategorycodes             = Cat\u00E9gories fiscales
 path.dutyfeetaxes                        = Taxes
-path.dutyfeetaxtypecodes				 = Types de taxes
+path.dutyfeetaxtypecodes                 = Types de taxes
 path.eco                                 = Ordres de modifications
 path.ecoreports                          = Rapports sur les OM
 path.exchange                            = Echange
