--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -225,6 +225,15 @@ bcpg_bcpgmodel.property.bcpg_costListValuePerProduct.title                      
 bcpg_bcpgmodel.property.bcpg_costType.title                                     = Type
 bcpg_bcpgmodel.property.bcpg_cstsCode.title                                     = Code
 bcpg_bcpgmodel.property.bcpg_cstsCodeType.title                                 = Type
+bcpg_bcpgmodel.property.bcpg_docTypeAutoExpirationDate.title                    = Automatic ex\u00EEration (d)
+bcpg_bcpgmodel.property.bcpg_docTypeDestPath.title                              = Path
+bcpg_bcpgmodel.property.bcpg_docTypeIsMandatory.title                           = Is mandatory
+bcpg_bcpgmodel.property.bcpg_docTypeIsValidityType.title                        = Validity type
+bcpg_bcpgmodel.property.bcpg_docTypeLinkedCharacts.title                        = Related characteristics
+bcpg_bcpgmodel.property.bcpg_docTypeLinkedHierarchy.title                       = Related families
+bcpg_bcpgmodel.property.bcpg_docTypeLinkedTypes.title                           = Entity types
+bcpg_bcpgmodel.property.bcpg_docTypeMandatoryFormula.title                      = Formula
+bcpg_bcpgmodel.property.bcpg_docTypeNameFormat.title                            = Name format
 bcpg_bcpgmodel.property.bcpg_drainedWeight.title                                = Drained weight (kg)
 bcpg_bcpgmodel.property.bcpg_dropPackagingOfComponents.title                    = Discard packaging of components
 bcpg_bcpgmodel.property.bcpg_dynamicCharactColumn.title                         = Column
@@ -842,6 +851,9 @@ listconstraint.bcpg_toxTypesConstraint.Sensitization                  = Sensitiz
 listconstraint.bcpg_toxTypesConstraint.SkinIrritationLeaveOn          = Skin irritation leave-on
 listconstraint.bcpg_toxTypesConstraint.SkinIrritationRinseOff         = Skin irritation rinse-off
 listconstraint.bcpg_toxTypesConstraint.SystemicIngredient             = Systemic ingredient
+listconstraint.bcpg_validityTypes_AUTO                                = Automatic
+listconstraint.bcpg_validityTypes_MANUAL                              = Manual
+listconstraint.bcpg_validityTypes_NONE                                = None
 listconstraint.bcpg_variantColumns.bcpg_variantColumn1                = Variant 1
 listconstraint.bcpg_variantColumns.bcpg_variantColumn2                = Variant 2
 listconstraint.bcpg_variantColumns.bcpg_variantColumn3                = Variant 3
