--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -225,6 +225,15 @@ bcpg_bcpgmodel.property.bcpg_costListValuePerProduct.title                      
 bcpg_bcpgmodel.property.bcpg_costType.title                                     = Type
 bcpg_bcpgmodel.property.bcpg_cstsCode.title                                     = Code
 bcpg_bcpgmodel.property.bcpg_cstsCodeType.title                                 = Type
+bcpg_bcpgmodel.property.bcpg_docTypeAutoExpirationDate.title                    = Expiration automatique (d)
+bcpg_bcpgmodel.property.bcpg_docTypeDestPath.title                              = Chemin
+bcpg_bcpgmodel.property.bcpg_docTypeIsMandatory.title                           = Est obligatoire
+bcpg_bcpgmodel.property.bcpg_docTypeIsValidityType.title                        = Type de validit\u00E9
+bcpg_bcpgmodel.property.bcpg_docTypeLinkedCharacts.title                        = Charact\u00E9ristiques li\u00E9es
+bcpg_bcpgmodel.property.bcpg_docTypeLinkedHierarchy.title                       = Familles li\u00E9es
+bcpg_bcpgmodel.property.bcpg_docTypeLinkedTypes.title                           = Types d'entit\u00E9
+bcpg_bcpgmodel.property.bcpg_docTypeMandatoryFormula.title                      = Formule
+bcpg_bcpgmodel.property.bcpg_docTypeNameFormat.title                            = Format du nom
 bcpg_bcpgmodel.property.bcpg_drainedWeight.title                                = Poids net \u00E9goutt\u00E9 (kg)
 bcpg_bcpgmodel.property.bcpg_dropPackagingOfComponents.title                    = Jeter les emballages des composants
 bcpg_bcpgmodel.property.bcpg_dynamicCharactColumn.title                         = Colonne
@@ -840,6 +849,9 @@ listconstraint.bcpg_toxTypesConstraint.Sensitization                  = Sensibil
 listconstraint.bcpg_toxTypesConstraint.SkinIrritationLeaveOn          = Irritation cutan\u00E9e non rinc\u00E9
 listconstraint.bcpg_toxTypesConstraint.SkinIrritationRinseOff         = Irritation cutan\u00E9e rinc\u00E9
 listconstraint.bcpg_toxTypesConstraint.SystemicIngredient             = Ingr\u00E9dient syst\u00E9mique
+listconstraint.bcpg_validityTypes_AUTO                                = Automatique
+listconstraint.bcpg_validityTypes_MANUAL                              = Manuelle
+listconstraint.bcpg_validityTypes_NONE                                = Aucune
 listconstraint.bcpg_variantColumns.bcpg_variantColumn1                = Variante 1
 listconstraint.bcpg_variantColumns.bcpg_variantColumn2                = Variante 2
 listconstraint.bcpg_variantColumns.bcpg_variantColumn3                = Variante 3
