--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
@@ -34,15 +34,17 @@ basket.add.label  = Panier
 basket.add.tip    = Ajouter
 basket.remove.tip = Supprimer
 
-becpg.forms.help.notificationFrequency = Pour une notification quotidienne mettre \u00E0 Jour. \nPour une notification hebdomadaire mettre \u00E0 Semaine. \nPour une notification mensuel mettre \u00E0 Mois. \nPour une notification annuelle mettre \u00E0 Ann\u00E9e.
-becpg.forms.help.notificationTimeType  = # X jours avant la date =>  \n[MIN , (NOW-X)].  \n\n# X jours apr\u00E8s la date =>  \n[(NOW+X) , MAX].  \n\n# depuis X jours =>  \n[(NOW-X) , NOW].  \n\n# Dans moins de X jours =>  \n[NOW , (NOW+X)].  \n\n\n# X jours \u00E0 la date: \n=> \u00E9gal \u00E0 (NOW+X). \n\n#X est un entier d\u00E9clar\u00E9 dans le champ X jours.
-becpg.forms.help.nrConditions          = Ajouter une requ\u00EAte fts pour un filtrage plus ad\u00E9quate (@cm\\:name:"nom du produit").
-becpg.forms.set.audit.label            = Audit
-becpg.forms.set.branch.label           = Version
-becpg.forms.set.category.label         = Cat\u00E9gories
-becpg.forms.set.designation.label      = D\u00E9signation
-becpg.forms.set.search.label           = Recherche
-becpg.forms.set.template.label         = Mod\u00E8le
+becpg.forms.help.notificationFrequency             = Pour une notification quotidienne mettre \u00E0 Jour. \nPour une notification hebdomadaire mettre \u00E0 Semaine. \nPour une notification mensuel mettre \u00E0 Mois. \nPour une notification annuelle mettre \u00E0 Ann\u00E9e.
+becpg.forms.help.notificationTimeType              = # X jours avant la date =>  \n[MIN , (NOW-X)].  \n\n# X jours apr\u00E8s la date =>  \n[(NOW+X) , MAX].  \n\n# depuis X jours =>  \n[(NOW-X) , NOW].  \n\n# Dans moins de X jours =>  \n[NOW , (NOW+X)].  \n\n\n# X jours \u00E0 la date: \n=> \u00E9gal \u00E0 (NOW+X). \n\n#X est un entier d\u00E9clar\u00E9 dans le champ X jours.
+becpg.forms.help.nrConditions                      = Ajouter une requ\u00EAte fts pour un filtrage plus ad\u00E9quate (@cm\\:name:"nom du produit").
+becpg.forms.set.audit.label                        = Audit
+becpg.forms.set.branch.label                       = Version
+becpg.forms.set.category.label                     = Cat\u00E9gories
+becpg.forms.set.designation.label                  = D\u00E9signation
+becpg.forms.set.document-type-autogeneration.label = G\u00E9n\u00E9ration automatique
+becpg.forms.set.document-type.label                = Type de document
+becpg.forms.set.search.label                       = Recherche
+becpg.forms.set.template.label                     = Mod\u00E8le
 
 button.bulkEdit                 = Edition multiple
 button.columns-conf             = &nbsp;
@@ -114,15 +116,15 @@ linkshare.action.google-plus.label = Partager via Google+
 linkshare.action.twitter.label     = Partager via Twitter
 linkshare.action.twitter.message   = Fichier {1} partag\u00E9 via beCPG
 
-menu.basket.empty                  = Vider le panier
-menu.basket.show                   = Afficher le panier
-menu.create-content.entity         = Entit\u00E9...
-menu.create-content.externalLink   = Lien externe...
-menu.selected-items.assign-process = D\u00E9marrer un processus...
-menu.selected-items.basket         = Ajouter au panier
-menu.selected-items.lock           = Verrouiller le(s) ligne(s)
-menu.selected-items.quick-share    = Partager les documents
-menu.selected-items.unlock         = D\u00E9verrouiller le(s) ligne(s)
+menu.basket.empty                           = Vider le panier
+menu.basket.show                            = Afficher le panier
+menu.create-content.entity                  = Entit\u00E9...
+menu.create-content.externalLink            = Lien externe...
+menu.selected-items.assign-process          = D\u00E9marrer un processus...
+menu.selected-items.basket                  = Ajouter au panier
+menu.selected-items.lock                    = Verrouiller le(s) ligne(s)
+menu.selected-items.quick-share             = Partager les documents
+menu.selected-items.unlock                  = D\u00E9verrouiller le(s) ligne(s)
 menu.selected-items.update-supplier-account = Mettre \u00E0 jour le compte fournisseur
 
 message.annotation-cancel.failure             = Impossible d'annuler les annotations
