--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
@@ -66,6 +66,7 @@ data.list.costList                            = Co\u00FBt
 data.list.customsCode                         = Codes douaniers
 data.list.datacarriertypecode                 = Types de code \u00E0 barres
 data.list.deliverableList                     = Livrable
+data.list.documentType                        = Types de documents
 data.list.dutyFeeTax                          = Taxes
 data.list.dynamicCharactList                  = Caract\u00E9ristiques calcul\u00E9es
 data.list.eco                                 = Ordres de modifications
