--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
@@ -89,10 +89,11 @@ data.list.costList                            = Co\u00FBt
 data.list.customsCode                         = Codes douaniers
 data.list.datacarriertypecode                 = Types de code \u00E0 barres
 data.list.deliverableList                     = Livrable
-data.list.dutyfeetaxagencycodes				  = Organismes fiscaux
-data.list.dutyfeetaxcategorycodes			  = Cat\u00E9gories fiscales
+data.list.documenttype                        = Types de document
+data.list.dutyfeetaxagencycodes               = Organismes fiscaux
+data.list.dutyfeetaxcategorycodes             = Cat\u00E9gories fiscales
 data.list.dutyfeetaxes                        = Taxes
-data.list.dutyfeetaxtypecodes				  = Types de taxes
+data.list.dutyfeetaxtypecodes                 = Types de taxes
 data.list.dynamicCharactList                  = Caract\u00E9ristiques calcul\u00E9es
 data.list.eco                                 = Ordres de modifications
 data.list.ecoreports                          = Rapports sur les OM
