Fix #23404 - [Feature] Create document aspect

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -76,6 +76,8 @@ bcpg_bcpgmodel.association.bcpg_cstsCodeCountry.title                           
 bcpg_bcpgmodel.association.bcpg_customsCodeRef.description                      = Customs code
 bcpg_bcpgmodel.association.bcpg_customsCodeRef.title                            = Customs code
 bcpg_bcpgmodel.association.bcpg_diluentRef.title                                = Diluent
+bcpg_bcpgmodel.association.bcpg_documentEntityRef.title                         = Document entity
+bcpg_bcpgmodel.association.bcpg_documentTypeRef.title                           = Document type
 bcpg_bcpgmodel.association.bcpg_filBioOrigins.title                             = Biology origins
 bcpg_bcpgmodel.association.bcpg_filGeoOrigins.title                             = Geographical origins
 bcpg_bcpgmodel.association.bcpg_filGeoTransfo.title                             = Countries of transfo
@@ -234,6 +236,8 @@ bcpg_bcpgmodel.property.bcpg_docTypeLinkedHierarchy.title                       
 bcpg_bcpgmodel.property.bcpg_docTypeLinkedTypes.title                           = Entity types
 bcpg_bcpgmodel.property.bcpg_docTypeMandatoryFormula.title                      = Formula
 bcpg_bcpgmodel.property.bcpg_docTypeNameFormat.title                            = Name format
+bcpg_bcpgmodel.property.bcpg_documentIsMandatory.title                          = Is mandatory
+bcpg_bcpgmodel.property.bcpg_documentState.title                                = Document state
 bcpg_bcpgmodel.property.bcpg_drainedWeight.title                                = Drained weight (kg)
 bcpg_bcpgmodel.property.bcpg_dropPackagingOfComponents.title                    = Discard packaging of components
 bcpg_bcpgmodel.property.bcpg_dynamicCharactColumn.title                         = Column
@@ -737,6 +741,11 @@ listconstraint.bcpg_declarationTypes.DoNotDetailsAtEnd                = Put at t
 listconstraint.bcpg_declarationTypes.Group                            = Group
 listconstraint.bcpg_declarationTypes.Kit                              = Kit  
 listconstraint.bcpg_declarationTypes.Omit                             = Omit
+listconstraint.bcpg_documentStates.Archived                           = Archived
+listconstraint.bcpg_documentStates.OnHold                             = On hold
+listconstraint.bcpg_documentStates.Refused                            = Refused
+listconstraint.bcpg_documentStates.ToValidate                         = To validate
+listconstraint.bcpg_documentStates.Valid                              = Valid
 listconstraint.bcpg_dynamicCharactColumns.bcpg_dynamicCharactColumn1  = Column 1
 listconstraint.bcpg_dynamicCharactColumns.bcpg_dynamicCharactColumn10 = Column 10
 listconstraint.bcpg_dynamicCharactColumns.bcpg_dynamicCharactColumn2  = Column 2
