--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -76,6 +76,8 @@ bcpg_bcpgmodel.association.bcpg_cstsCodeCountry.title                           
 bcpg_bcpgmodel.association.bcpg_customsCodeRef.description                      = Codes douanier
 bcpg_bcpgmodel.association.bcpg_customsCodeRef.title                            = Codes douanier
 bcpg_bcpgmodel.association.bcpg_diluentRef.title                                = Diluant
+bcpg_bcpgmodel.association.bcpg_documentEntityRef.title                         = Entit\u00E9 du document
+bcpg_bcpgmodel.association.bcpg_documentTypeRef.title                           = Type de document
 bcpg_bcpgmodel.association.bcpg_filBioOrigins.title                             = Origines bio
 bcpg_bcpgmodel.association.bcpg_filGeoOrigins.title                             = Origines g\u00E9o
 bcpg_bcpgmodel.association.bcpg_filGeoTransfo.title                             = Pays de transfo
@@ -234,6 +236,8 @@ bcpg_bcpgmodel.property.bcpg_docTypeLinkedHierarchy.title                       
 bcpg_bcpgmodel.property.bcpg_docTypeLinkedTypes.title                           = Types d'entit\u00E9
 bcpg_bcpgmodel.property.bcpg_docTypeMandatoryFormula.title                      = Formule
 bcpg_bcpgmodel.property.bcpg_docTypeNameFormat.title                            = Format du nom
+bcpg_bcpgmodel.property.bcpg_documentIsMandatory.title                          = Est obligatoire
+bcpg_bcpgmodel.property.bcpg_documentState.title                                = Etat du document
 bcpg_bcpgmodel.property.bcpg_drainedWeight.title                                = Poids net \u00E9goutt\u00E9 (kg)
 bcpg_bcpgmodel.property.bcpg_dropPackagingOfComponents.title                    = Jeter les emballages des composants
 bcpg_bcpgmodel.property.bcpg_dynamicCharactColumn.title                         = Colonne
@@ -735,6 +739,11 @@ listconstraint.bcpg_declarationTypes.DoNotDetailsAtEnd                = Mettre \
 listconstraint.bcpg_declarationTypes.Group                            = Regrouper
 listconstraint.bcpg_declarationTypes.Kit                              = Assortiment  
 listconstraint.bcpg_declarationTypes.Omit                             = Omettre
+listconstraint.bcpg_documentStates.Archived                           = Archiv\u00E9
+listconstraint.bcpg_documentStates.OnHold                             = En attente
+listconstraint.bcpg_documentStates.Refused                            = Refus\u00E9
+listconstraint.bcpg_documentStates.ToValidate                         = A valider
+listconstraint.bcpg_documentStates.Valid                              = Valid\u00E9
 listconstraint.bcpg_dynamicCharactColumns.bcpg_dynamicCharactColumn1  = Colonne 1
 listconstraint.bcpg_dynamicCharactColumns.bcpg_dynamicCharactColumn10 = Colonne 10
 listconstraint.bcpg_dynamicCharactColumns.bcpg_dynamicCharactColumn2  = Colonne 2
