--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
@@ -43,6 +43,7 @@ becpg.forms.set.category.label                     = Cat\u00E9gories
 becpg.forms.set.designation.label                  = D\u00E9signation
 becpg.forms.set.document-type-autogeneration.label = G\u00E9n\u00E9ration automatique
 becpg.forms.set.document-type.label                = Type de document
+becpg.forms.set.effectivity.label                  = Validit\u00E9
 becpg.forms.set.search.label                       = Recherche
 becpg.forms.set.template.label                     = Mod\u00E8le
 
