--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
@@ -164,6 +164,7 @@ becpg.forms.set.conditioning.label                             = Conditionnement
 becpg.forms.set.consumer.label                                 = Informations de consommation
 becpg.forms.set.costs-criteria.label                           = Crit\u00E8res sur les  co\u00FBts
 becpg.forms.set.dates.label                                    = Dates
+becpg.forms.set.documentType.label                             = Type de document
 becpg.forms.set.documents.label                                = Documents
 becpg.forms.set.eco.score.label                                = Score et \u00E9chelle \u00E9cologique
 becpg.forms.set.effectivity.label                              = Dates d'effet
