Fix #23404 - [Feature] Create document aspect - fix label

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -76,6 +76,7 @@ bcpg_bcpgmodel.association.bcpg_cstsCodeCountry.title                           
 bcpg_bcpgmodel.association.bcpg_customsCodeRef.description                      = Customs code
 bcpg_bcpgmodel.association.bcpg_customsCodeRef.title                            = Customs code
 bcpg_bcpgmodel.association.bcpg_diluentRef.title                                = Diluent
+bcpg_bcpgmodel.association.bcpg_docTypeLinkedCharacts.title                     = Related characteristics
 bcpg_bcpgmodel.association.bcpg_documentEntityRef.title                         = Document entity
 bcpg_bcpgmodel.association.bcpg_documentTypeRef.title                           = Document type
 bcpg_bcpgmodel.association.bcpg_filBioOrigins.title                             = Biology origins
@@ -231,7 +232,6 @@ bcpg_bcpgmodel.property.bcpg_docTypeAutoExpirationDate.title                    
 bcpg_bcpgmodel.property.bcpg_docTypeDestPath.title                              = Path
 bcpg_bcpgmodel.property.bcpg_docTypeIsMandatory.title                           = Is mandatory
 bcpg_bcpgmodel.property.bcpg_docTypeIsValidityType.title                        = Validity type
-bcpg_bcpgmodel.property.bcpg_docTypeLinkedCharacts.title                        = Related characteristics
 bcpg_bcpgmodel.property.bcpg_docTypeLinkedHierarchy.title                       = Related families
 bcpg_bcpgmodel.property.bcpg_docTypeLinkedTypes.title                           = Entity types
 bcpg_bcpgmodel.property.bcpg_docTypeMandatoryFormula.title                      = Formula
