--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -76,6 +76,7 @@ bcpg_bcpgmodel.association.bcpg_cstsCodeCountry.title                           
 bcpg_bcpgmodel.association.bcpg_customsCodeRef.description                      = Codes douanier
 bcpg_bcpgmodel.association.bcpg_customsCodeRef.title                            = Codes douanier
 bcpg_bcpgmodel.association.bcpg_diluentRef.title                                = Diluant
+bcpg_bcpgmodel.association.bcpg_docTypeLinkedCharacts.title                     = Charact\u00E9ristiques li\u00E9es
 bcpg_bcpgmodel.association.bcpg_documentEntityRef.title                         = Entit\u00E9 du document
 bcpg_bcpgmodel.association.bcpg_documentTypeRef.title                           = Type de document
 bcpg_bcpgmodel.association.bcpg_filBioOrigins.title                             = Origines bio
@@ -231,7 +232,6 @@ bcpg_bcpgmodel.property.bcpg_docTypeAutoExpirationDate.title                    
 bcpg_bcpgmodel.property.bcpg_docTypeDestPath.title                              = Chemin
 bcpg_bcpgmodel.property.bcpg_docTypeIsMandatory.title                           = Est obligatoire
 bcpg_bcpgmodel.property.bcpg_docTypeIsValidityType.title                        = Type de validit\u00E9
-bcpg_bcpgmodel.property.bcpg_docTypeLinkedCharacts.title                        = Charact\u00E9ristiques li\u00E9es
 bcpg_bcpgmodel.property.bcpg_docTypeLinkedHierarchy.title                       = Familles li\u00E9es
 bcpg_bcpgmodel.property.bcpg_docTypeLinkedTypes.title                           = Types d'entit\u00E9
 bcpg_bcpgmodel.property.bcpg_docTypeMandatoryFormula.title                      = Formule
