Fix #23404 - [Feature] Create document aspect - fix init repo + locales

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
@@ -37,7 +37,7 @@ path.controlunits                        = Unit\u00E9s de contr\u00F4le
 path.costs                               = Co\u00FBts
 path.customscodes                        = Codes douaniers
 path.datacarriertypecode                 = Types de code \u00E0 barres
-path.documenttype                        = Types de document
+path.documenttypes                       = Types de document
 path.dutyfeetaxagencycodes               = Organismes fiscaux
 path.dutyfeetaxcategorycodes             = Cat\u00E9gories fiscales
 path.dutyfeetaxes                        = Taxes
