--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
@@ -89,7 +89,7 @@ data.list.costList                            = Co\u00FBt
 data.list.customsCode                         = Codes douaniers
 data.list.datacarriertypecode                 = Types de code \u00E0 barres
 data.list.deliverableList                     = Livrable
-data.list.documenttype                        = Types de document
+data.list.documenttypes                       = Types de document
 data.list.dutyfeetaxagencycodes               = Organismes fiscaux
 data.list.dutyfeetaxcategorycodes             = Cat\u00E9gories fiscales
 data.list.dutyfeetaxes                        = Taxes
