Fix #23404 - [Feature] Create document aspect - fix adv search

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -9,7 +9,7 @@ bcpg_bcpgmodel.aspect.bcpg_consumerAspect.description                           
 bcpg_bcpgmodel.aspect.bcpg_consumerAspect.title                                 = Informations pour le consommateur
 bcpg_bcpgmodel.aspect.bcpg_customsCodeAspect.description                        = Code douanier
 bcpg_bcpgmodel.aspect.bcpg_customsCodeAspect.title                              = Aspect code douanier
-bcpg_bcpgmodel.aspect.bcpg_documentAspect.title                                 = Aspect type de document
+bcpg_bcpgmodel.aspect.bcpg_documentAspect.title                                 = Document
 bcpg_bcpgmodel.aspect.bcpg_eanAspect.description                                = Code GTIN/EAN
 bcpg_bcpgmodel.aspect.bcpg_eanAspect.title                                      = Code GTIN/EAN
 bcpg_bcpgmodel.aspect.bcpg_ecoScoreAspect.title                                 = Aspect score \u00E9cologique
