--- a/becpg-share/src/main/resources/alfresco/messages/becpg-model_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-model_fr.properties
@@ -1,6 +1,7 @@
 
 aspect.bcpg_autoMergeAspect         = Rangement de version automatique
 aspect.bcpg_docLinkedEntitiesAspect = Lien document entit\u00E9s
+aspect.bcpg_documentAspect          = Document
 aspect.bcpg_entityBranchAspect      = Branche
 aspect.bcpg_entityTplAspect         = Mod\u00E8le d'entit\u00E9
 aspect.bcpg_entityVariantAspect     = Variante
