Fix #23404 - [Feature] Create document aspect - fix model

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -229,10 +229,10 @@ bcpg_bcpgmodel.property.bcpg_costListValuePerProduct.title                      
 bcpg_bcpgmodel.property.bcpg_costType.title                                     = Type
 bcpg_bcpgmodel.property.bcpg_cstsCode.title                                     = Code
 bcpg_bcpgmodel.property.bcpg_cstsCodeType.title                                 = Type
-bcpg_bcpgmodel.property.bcpg_docTypeAutoExpirationDate.title                    = Expiration automatique (d)
+bcpg_bcpgmodel.property.bcpg_docTypeAutoExpirationDelay.title                   = Expiration automatique (d)
 bcpg_bcpgmodel.property.bcpg_docTypeDestPath.title                              = Chemin
+bcpg_bcpgmodel.property.bcpg_docTypeEffectivityType.title                       = Type de validit\u00E9
 bcpg_bcpgmodel.property.bcpg_docTypeIsMandatory.title                           = Est obligatoire
-bcpg_bcpgmodel.property.bcpg_docTypeIsValidityType.title                        = Type de validit\u00E9
 bcpg_bcpgmodel.property.bcpg_docTypeLinkedHierarchy.title                       = Familles li\u00E9es
 bcpg_bcpgmodel.property.bcpg_docTypeLinkedTypes.title                           = Types d'entit\u00E9
 bcpg_bcpgmodel.property.bcpg_docTypeMandatoryFormula.title                      = Formule
@@ -740,6 +740,9 @@ listconstraint.bcpg_declarationTypes.DoNotDetailsAtEnd                = Mettre \
 listconstraint.bcpg_declarationTypes.Group                            = Regrouper
 listconstraint.bcpg_declarationTypes.Kit                              = Assortiment  
 listconstraint.bcpg_declarationTypes.Omit                             = Omettre
+listconstraint.bcpg_documentEffectivityTypes.AUTO                     = Automatique
+listconstraint.bcpg_documentEffectivityTypes.MANUAL                   = Manuelle
+listconstraint.bcpg_documentEffectivityTypes.NONE                     = Aucune
 listconstraint.bcpg_documentStates.Archived                           = Archiv\u00E9
 listconstraint.bcpg_documentStates.OnHold                             = En attente
 listconstraint.bcpg_documentStates.Refused                            = Refus\u00E9
@@ -859,9 +862,6 @@ listconstraint.bcpg_toxTypesConstraint.Sensitization                  = Sensibil
 listconstraint.bcpg_toxTypesConstraint.SkinIrritationLeaveOn          = Irritation cutan\u00E9e non rinc\u00E9
 listconstraint.bcpg_toxTypesConstraint.SkinIrritationRinseOff         = Irritation cutan\u00E9e rinc\u00E9
 listconstraint.bcpg_toxTypesConstraint.SystemicIngredient             = Ingr\u00E9dient syst\u00E9mique
-listconstraint.bcpg_validityTypes_AUTO                                = Automatique
-listconstraint.bcpg_validityTypes_MANUAL                              = Manuelle
-listconstraint.bcpg_validityTypes_NONE                                = Aucune
 listconstraint.bcpg_variantColumns.bcpg_variantColumn1                = Variante 1
 listconstraint.bcpg_variantColumns.bcpg_variantColumn2                = Variante 2
 listconstraint.bcpg_variantColumns.bcpg_variantColumn3                = Variante 3
