Fix #23404 - [Feature] Create document aspect - add cm:content in product-list

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
@@ -180,6 +180,7 @@ type.bcpg_rawMaterial              = Mati\u00E8re premi\u00E8re
 type.bcpg_resourceProduct          = Ressource
 type.bcpg_semiFinishedProduct      = Produit semi fini
 type.bcpg_supplier                 = Fournisseur
+type.cm_content                    = Contenu
 type.ecm_changeOrder               = Ordre de modification
 type.qa_batch                      = Ordre de fabrication
 type.qa_controlMethod              = M\u00E9thode de contr\u00F4le
