--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/product/product-list-toolbar.get_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/product/product-list-toolbar.get_fr.properties
@@ -5,6 +5,7 @@ button.show-thumbnails = Afficher les miniatures
 filter.Archived       = Archiv\u00E9
 filter.Compliant      = Conforme
 filter.NonCompliant   = Non conforme
+filter.OnHold         = En attente
 filter.Refused        = Refus\u00E9
 filter.Simulation     = Simulation
 filter.Stopped        = Arr\u00EAt\u00E9
