ix #23404 - [Feature] Create document aspect - fix cm:content filter

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
@@ -223,6 +223,7 @@ becpg.forms.set.secondaryPackaging.label                       = Unit\u00E9 logi
 becpg.forms.set.security.label                                 = S\u00E9curit\u00E9
 becpg.forms.set.securityRule.label                             = R\u00E8gle de s\u00E9curit\u00E9
 becpg.forms.set.selected-products.label                        = S\u00E9lection des produits
+becpg.forms.set.supplier-info.label                            = Information fournisseur
 becpg.forms.set.survey-criteria.label                          = Crit\u00E8res sur les questionnaires
 becpg.forms.set.svhc-criteria.label                            = Crit\u00E8res sur les substances dangereuses
 becpg.forms.set.tertiaryPackaging.label                        = Palettisation
