Fix #23404 - [Feature] Create document aspect - add beCPG code

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_en.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_en.properties
@@ -2,6 +2,7 @@
 autonum.prefix.changeOrder.code              = ECO
 #Prefix
 autonum.prefix.client.code                   = C
+autonum.prefix.content.code                  = DOC
 autonum.prefix.controlPlan.code              = CP
 autonum.prefix.finishedProduct.code          = FP
 autonum.prefix.linkedValue.code              = LNK
