--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_fr.properties
@@ -1,6 +1,7 @@
 
 autonum.prefix.changeOrder.code              = OM
 autonum.prefix.client.code                   = C
+autonum.prefix.content.code                  = DOC
 autonum.prefix.controlPlan.code              = PC
 autonum.prefix.finishedProduct.code          = PF
 autonum.prefix.linkedValue.code              = LNK
