Fix #23404 - [Feature] Create documentTypeon core + move properties from plm to core

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
@@ -34,6 +34,27 @@ basket.add.label  = Panier
 basket.add.tip    = Ajouter
 basket.remove.tip = Supprimer
 
+becpg.faceted-search.date.next-one-month.label     = Prochain mois
+becpg.faceted-search.date.next-one-week.label      = Prochaine semaine
+becpg.faceted-search.date.next-one-year.label      = Prochaine ann\u00E9e
+becpg.faceted-search.date.next-six-months.label    = Prochain 6 mois
+becpg.faceted-search.date.next-six-years.label     = Prochaines 6 ann\u00E9es
+becpg.faceted-search.date.next-three-months.label  = Prochains 3 mois
+becpg.faceted-search.date.next-three-years.label   = Prochaines 3 ann\u00E9es
+becpg.faceted-search.date.next-two-weeks.label     = 2 prochaines semaines
+becpg.faceted-search.date.next-two-years.label     = Prochaines 2 ann\u00E9es
+becpg.faceted-search.date.one-day.label            = Aujourd'hui
+becpg.faceted-search.date.one-month.label          = Mois pr\u00E9c\u00E9dent
+becpg.faceted-search.date.one-week.label           = Semaine pr\u00E9c\u00E9dente
+becpg.faceted-search.date.one-year.label           = Ann\u00E9e pr\u00E9c\u00E9dente
+becpg.faceted-search.date.six-months.label         = 6 mois pr\u00E9c\u00E9dents
+becpg.faceted-search.date.six-years.label          = 6 ann\u00E9es pr\u00E9c\u00E9dentes
+becpg.faceted-search.date.three-months.label       = 3 mois pr\u00E9c\u00E9dents
+becpg.faceted-search.date.three-years.label        = 3 ann\u00E9es pr\u00E9c\u00E9dentes
+becpg.faceted-search.date.two-weeks.label          = 2 semaines pr\u00E9c\u00E9dentes
+becpg.faceted-search.date.two-years.label          = 2 ann\u00E9es pr\u00E9c\u00E9dentes
+becpg.faceted-search.facet-menu.facet.from         = Valide de
+becpg.faceted-search.facet-menu.facet.to           = Valide jusqu'\u00E0
 becpg.forms.help.notificationFrequency             = Pour une notification quotidienne mettre \u00E0 Jour. \nPour une notification hebdomadaire mettre \u00E0 Semaine. \nPour une notification mensuel mettre \u00E0 Mois. \nPour une notification annuelle mettre \u00E0 Ann\u00E9e.
 becpg.forms.help.notificationTimeType              = # X jours avant la date =>  \n[MIN , (NOW-X)].  \n\n# X jours apr\u00E8s la date =>  \n[(NOW+X) , MAX].  \n\n# depuis X jours =>  \n[(NOW-X) , NOW].  \n\n# Dans moins de X jours =>  \n[NOW , (NOW+X)].  \n\n\n# X jours \u00E0 la date: \n=> \u00E9gal \u00E0 (NOW+X). \n\n#X est un entier d\u00E9clar\u00E9 dans le champ X jours.
 becpg.forms.help.nrConditions                      = Ajouter une requ\u00EAte fts pour un filtrage plus ad\u00E9quate (@cm\\:name:"nom du produit").
