Fix #27453 - [Feature] Add new faceted search options

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_en.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_en.properties
@@ -7,6 +7,7 @@ bcpg_bcpgmodel.aspect.bcpg_colorAspect.title                    = Color
 bcpg_bcpgmodel.aspect.bcpg_depthLevelAspect.description         = Level
 bcpg_bcpgmodel.aspect.bcpg_depthLevelAspect.title               = Level
 bcpg_bcpgmodel.aspect.bcpg_docLinkedEntitiesAspect.title        = Document entities link aspect
+bcpg_bcpgmodel.aspect.bcpg_documentAspect.title                 = Document
 bcpg_bcpgmodel.aspect.bcpg_effectivityAspect.description        = Effectivity aspect
 bcpg_bcpgmodel.aspect.bcpg_effectivityAspect.title              = Effectivity aspect
 bcpg_bcpgmodel.aspect.bcpg_entityBranchAspect.description       = Represents a branch
@@ -37,6 +38,9 @@ bcpg_bcpgmodel.association.bcpg_compareWithEntities.title       = Entities to co
 bcpg_bcpgmodel.association.bcpg_consumerGroups.title            = Consumer groups
 bcpg_bcpgmodel.association.bcpg_contributorGroups.title         = Contributor groups
 bcpg_bcpgmodel.association.bcpg_docLinkedEntities.title         = Linked entities
+bcpg_bcpgmodel.association.bcpg_docTypeLinkedCharacts.title     = Related characteristics
+bcpg_bcpgmodel.association.bcpg_documentEntityRef.title         = Document entity
+bcpg_bcpgmodel.association.bcpg_documentTypeRef.title           = Document type
 bcpg_bcpgmodel.association.bcpg_editorGroups.title              = Editor groups
 bcpg_bcpgmodel.association.bcpg_entityTplDefaultDest.title      = Default destination
 bcpg_bcpgmodel.association.bcpg_entityTplRef.description        = The template will initialize the entity
@@ -65,6 +69,16 @@ bcpg_bcpgmodel.property.bcpg_charactName.title                  = Name
 bcpg_bcpgmodel.property.bcpg_code.title                         = beCPG code
 bcpg_bcpgmodel.property.bcpg_color.title                        = Color
 bcpg_bcpgmodel.property.bcpg_depthLevel.title                   = Level
+bcpg_bcpgmodel.property.bcpg_docTypeAutoExpirationDelay.title   = Automatic ex\u00EEration (d)
+bcpg_bcpgmodel.property.bcpg_docTypeDestPath.title              = Path
+bcpg_bcpgmodel.property.bcpg_docTypeEffectivityType.title       = Effectivity type
+bcpg_bcpgmodel.property.bcpg_docTypeIsMandatory.title           = Is mandatory
+bcpg_bcpgmodel.property.bcpg_docTypeLinkedHierarchy.title       = Related families
+bcpg_bcpgmodel.property.bcpg_docTypeLinkedTypes.title           = Entity types
+bcpg_bcpgmodel.property.bcpg_docTypeMandatoryFormula.title      = Formula
+bcpg_bcpgmodel.property.bcpg_docTypeNameFormat.title            = Name format
+bcpg_bcpgmodel.property.bcpg_documentIsMandatory.title          = Is mandatory
+bcpg_bcpgmodel.property.bcpg_documentState.title                = Document state
 bcpg_bcpgmodel.property.bcpg_endEffectivity.title               = End of effectivity
 bcpg_bcpgmodel.property.bcpg_entityLists.title                  = Entity data lists
 bcpg_bcpgmodel.property.bcpg_entityTplClassName.title           = Class type
@@ -153,6 +167,14 @@ listconstraint.bcpg_activityTypes.Formulation               = Formulation
 listconstraint.bcpg_activityTypes.Merge                     = Merge
 listconstraint.bcpg_activityTypes.Report                    = Report
 listconstraint.bcpg_activityTypes.State                     = State
+listconstraint.bcpg_documentEffectivityTypes.AUTO           = Automatic
+listconstraint.bcpg_documentEffectivityTypes.MANUAL         = Manual
+listconstraint.bcpg_documentEffectivityTypes.NONE           = None
+listconstraint.bcpg_documentStates.Archived                 = Archived
+listconstraint.bcpg_documentStates.OnHold                   = On hold
+listconstraint.bcpg_documentStates.Refused                  = Refused
+listconstraint.bcpg_documentStates.ToValidate               = To validate
+listconstraint.bcpg_documentStates.Valid                    = Valid
 listconstraint.bcpg_externalLinkTargets._blank              = New tab
 listconstraint.bcpg_externalLinkTargets._self               = Current tab
 listconstraint.bcpg_nrRecurringDays.FRIDAY                  = Friday
